# rapid-evidence

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  rapid-evidence.md
.rapid-evidence/: req-0RMuAadtzyvX.json  req-7LdM5ZBuLDDV.json  req-8vr5eax53NWZ.json  req-A55HslSpItAh.json  req-ASDLB0vBt2md.json  req-Coao_75CKXtv.json  req-LwMDhqpiNTTt.json  req-OC0k9KknDoE1.json  req-WR5rlnQR1_CK.json  req-b6W3QnqgjZVO.json  req-f2Bg8N4W2ayP.json  req-gT7VzHPGggi1.json  req-joh8fVjVKgQl.json  req-xDkSVmTCKeIu.json  req-yZpBzbGAIt9a.json
docs/: CODEMAP.md
docs/features_change/2026-05/: 2026-05-27-azure-spot-quota-provider.md  2026-05-27-spot-vm-ip-probe-script.md  2026-05-28-batches-metrics-throughput-ui.md  2026-05-28-eviction-requeue-batch-progress.md  (+14 more)
scripts/: spot_vm_ip_probe.py
src/rapid_evidence/: __init__.py  api.py  cli.py
tests/: test_api.py  test_api_batches.py  test_api_events_scaling.py  test_api_jobs_regions.py  test_api_quota_regions.py  test_azure_cli_spot_provider.py  test_batches.py  test_cli.py  test_core_and_queue.py  test_jobs.py  test_metrics.py  test_remote_worker.py  test_sources.py  test_spot_pool_manager.py  test_spot_regions.py  test_spot_scheduler.py
web/: .gitignore  app.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/mockups/: mockup-1-command-center.html  mockup-2-region-grid.html  mockup-3-queue-focus.html  v2-1-throughput.html  v2-2-realmap.html  v2-3-scaling-timeline.html  v3-1-capacity-reactor.html  v3-2-tide-chart.html  v3-3-pool-cockpit.html
web/src/: main.tsx
(+90 files in other folders)
